FTV-401 - Add audit details for GET endpoints
